# QBOSingapore

./: .gitignore  QBO_README.txt  README.md  pyproject.toml
QBO/: QBO.sh  QBO.sh.~1~  QBO.sh.~2~  generate.sh  generate.sh.~1~  interpolate.sh  loop_QBO.sh  loop_QBO.sh.~1~  loop_QBO.sh.~2~  parse.sh
attic/: all.momi  dos_zu_unix.sh  sing.momi  sing.read
data/: .RData  .Rhistory  README  singapore2highres.ipynb  singapore2highres.py
grads/: fort.12  fort.2  qbo_highres.ctl  qbo_highres.gra  qbo_highres_km.ctl  qbo_lowres.ctl  qbo_lowres.gra  read_qbo_sun64.le  readqbo_sun64.le
idl/: contour_qbo.pro  filter_qbo.pro  interp_qbo.pro  qbo.pro  qbo_wind.pro  read_qbo.pro  read_qbo_extended.pro  read_qbo_nauj.pro  read_qbo_ncep.pro  read_qbo_raobs.pro  read_qbo_shea.pro  wsa_qbo.pro
netcdf/: qbo_highres.nc  qbo_highres_nc.ctl  qbo_lowres.nc  qbo_lowres_nc.ctl  reduce-qbo2nc-highres.nl  reduce-qbo2nc-lowres.nl
qbo_Rplot/: .RData  .Rhistory  filled.contour3.R  filled_contour3.py  filled_contour3.py.~1~  qbo_plot-gpt.py  qbo_plot.R  qbo_plot.R.~1~  qbo_plot.R.~2~  qbo_plot.py  qbo_plot2.py  qbo_plot3.py  test.R
srv/: Makefile  Makefile.~1~  Untitled-1.ipynb  Untitled-2.ipynb  Untitled.ipynb  custom_filename.html  eastward_wind_195301.nc  eastward_wind_19531.nc  eastward_wind_sing.nc  generate_plot.py  generate_plot.py.~1~  generate_plot_mod.py  generate_plot_mod.py.~1~  generate_plot_mod.py.~2~  generate_plot_old.py  plot.html  plot.js  qbo2netcdf.ipynb  qbo2netcdf.py  qbo2netcdf.py.~1~  qbo2netcdf.py.~2~  qbo2netcdfold.py  qbo_data_tgz.tgz  qbo_fub2netcdf.ipynb  (+15 more)
(+11986 files in other folders)
